--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
       </footer>
 
     </section>
+<script>
+    function getDefaultFontSize(pa) {
+        pa  = pa || document.body;
+        var who = document.createElement('div');
+
+        who.style.cssText = 'display: inline-block; padding: 0; line-height: 1; pasition: absolute; visibility: hidden; font-size: 1em;';
+
+        who.appendChild(document.createTextNode('M'));
+        pa.appendChild(who);
+        var fs = [who.offsetWidth, who.offsetHeight];
+        pa.removeChild(who);
+        return fs
+    }
+    alert(getDefaultFontSize());
+</script>
 
   
   </body>
